--- a/css/main.css
+++ b/css/main.css
@@ -16,3 +16,69 @@ i {
     display: flex;
     align-items: center;
 }
+
+.to-do-container {
+    margin-top: 70px;
+    flex-flow: nowrap;
+    overflow-y: auto;
+    
+}
+
+.to-do-list{
+    min-height: 80vh;
+    max-height: 80vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+    background-color: white;
+    border-radius: 5px;
+    padding: 10px 20px ;
+}
+
+.to-do-list-config{
+position: absolute;
+top: 0;
+right: 0;
+margin-top: 2px;
+
+}
+
+.to-do-icon-btn{
+    padding: 2px 4px;
+    margin: 0 5px;
+    border: solid 1px #007bff;
+    border-radius: 5px;
+    color:#007bff;
+    display: inline;
+    cursor: pointer;
+
+
+}
+.to-do-icon-btn:hover{
+    border: white;
+    background-color: #007bff;
+    color: white;
+}
+
+.to-do-list-title{
+    margin: 15px 0;
+}
+
+.to-do-icons{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.to-do-list-config .to-do-icon-btn{
+    border-color: white;
+    background-color: #4a627c;
+    color: white;
+
+}
+
+.to-do-list-config .to-do-icon-btn:hover{
+    border-color: #4a627c;
+    background-color: white;
+    color: #4a627c;
+    
+}
